Add Test Cases and Also Project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Lab6 JUnit Testing/Factorial/nbproject/private/
 /Lab6 JUnit Testing/Factorial/build/
+/MidTerm Lab/RemoveDuplicates/nbproject/private/
+/MidTerm Lab/JavaApplication1/nbproject/private/
+/MidTerm Lab/JavaApplication1/build/
+/MidTerm Lab/RemoveDuplicates/build/
